Industry User Info & Some Front-end Debugging
* changed button type from 'button' to 'submit'

* reformatted form fields with widget_tweaks tags

* added errors for the form fields. Styling the fields rendered with {% render_field %} is just like html.(See line 65 as an example)

* added first_login field to the IndustryUser model

* changed user's related_name in IndustryUser to avoid refactoring the whole code base

* first_login is set to false after the first successful initial information submission

* fixed some bugs in initial information form validation

* deleted unnecessary Meta class

* added if condition for showing the initial information form

* changed user.industry_user to user.industryuser at line 6

* altered some attributes of IndustryForm to be nullable. Also added industryform attribute to IndustryUser

* fixed email validation with respect to the user submitting the form

* removed email validation from this file and added the valid submitted form to the industry user model owning it

* made research_field required

* added status field

added status field to IndustryUser model also an if condition to blur the main div in base layout with respect to the user's status

* changed first_login to status

* add profile image support

* updated profile image tag

* Expert Front-end Debugged

* add vote pages to project

* The Whole Project Debugged

* edit required files

* build messages part of website

* researching questions page

* update initial information dialog

* Initial Information Shahriar (#22)

* changed button type from 'button' to 'submit'

* reformatted form fields with widget_tweaks tags

* added errors for the form fields. Styling the fields rendered with {% render_field %} is just like html.(See line 65 as an example)

* added first_login field to the IndustryUser model

* changed user's related_name in IndustryUser to avoid refactoring the whole code base

* first_lo

--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -19,7 +19,7 @@
   <body>
 {#  {% include 'expert/layouts/pageLoader.html' %}#}
   {% block dialog%}{% endblock %}
-  <div class="main {% if expert_user.status == "signed_up" %} blur-div" {% endif %}>
+  <div class="main">
     <div class="top-bar">
         <img src="{% static 'expert/img/logoName.png' %}" alt="chamranTeam">
         <div class="top-msg">
