--- a/expert/templates/expert/layouts/projectList.html
+++ b/expert/templates/expert/layouts/projectList.html
@@ -1,8 +1,7 @@
 <div class="row">
     <div class="col-lg-12 col-xs-12">
         <ul class="nav nav-tabs w-100" id="project-list">
-            <li class="nav-item"><a class="nav-link active" id="new-projects" href="#new-projects">جدیدترین پروژه ها</a>
-            </li>
+            <li class="nav-item"><a class="nav-link active" id="new-projects" href="#new-projects">جدیدترین پروژه ها</a></li>
             <li class="nav-item"><a class="nav-link" id="your-project" href="#your-project">پروژه های مرتبط</a></li>
             <li class="nav-item"><a class="nav-link" id="done-project" href="#done-project">پروژه های انجام شده</a></li>
         </ul>
