--- a/industry/templates/industry/layouts/initial_information.html
+++ b/industry/templates/industry/layouts/initial_information.html
@@ -48,9 +48,9 @@
                                 <div class="col-lg-12 rankDiv">
                                     <label class="rankLabel" for="id_industry_type">نوع شرکت</label>
                                     <select id="id_industry_type" name="industry_type" class="w-100">
-                                        <option selected dir="rtl">انتخاب کنید ...</option>
+                                        <option dir="rtl">انتخاب کنید ...</option>
+                                        <option value="0" >خصوصی</option>
                                         <option value="1">دولتی</option>
-                                        <option value="2">خصوصی</option>
                                     </select>
                                     {% render_field form.industry_type.errors %}
                                 </div>
