--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -6,7 +6,7 @@
 {% block name %} دکتر احسان شریف{% endblock %}
 
 {% block dialog %}
-    {% include 'expert/layouts/initial_information.html' %}
+    {#    {% include 'expert/layouts/initial_information.html' %}#}
     {% include 'expert/layouts/project_details.html' %}
     {% include 'expert/layouts/showProject.html' %}
     {% include 'expert/layouts/vote_dialog_industry.html' %}
