--- a/expert/templates/expert/layouts/initial_information.html
+++ b/expert/templates/expert/layouts/initial_information.html
@@ -1,163 +1,96 @@
-{% load static %}
-{% load widget_tweaks %}
-<div class="fixed-back initial-information"{% if expert_user.status == "signed_up" %}
-     style="display: block" {% endif %}>
+{% load static%}
+<div class="fixed-back initial-information" style="display: block">
     <div class="card text-right">
         <div class="card-head">اطلاعات اولیه</div>
         <div class="container">
-            <form enctype="multipart/form-data" action="{% url 'expert:index' %}" method="post" novalidate>
+            <form action="" method="post">
                 {% csrf_token %}
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="row">
-                            <div class="col-lg-12 text-center">
-                                <label for="upload-input" class="upload text-center">
-                                    <i class="fas fa-pencil-alt"></i>
-                                </label>
-                                <img src="{% static 'expert/img/profile.jpg' %}" alt="profile" class="profile"
-                                     width="150px" height="150px">
-                                <input type="file" id="upload-input" name="photo" accept="image/png, image/jpeg">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row">
+                      <div class="col-lg-12 text-center">
+                        <label for="upload-input" class="upload text-center">
+                            <i class="fas fa-pencil-alt"></i>
+                        </label>
+                        <img src="{% static 'expert/img/profile.jpg' %}" alt="profile" class="profile" width="150px" height="150px">
+                        <input type="file" id="upload-input" accept="image/png, image/jpeg">
+                      </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+{#for adding error add class "error" to input or textarea then add following div after that#}
+                            <label for="FirstName">نام</label>
+                            <input type="text" id="FirstName" class="w-100 error">
+                            <div class="error">
+                                <span>*</span>
+                                <span class="error-body">Error Body</span>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                {#for adding error add class "error" to input or textarea then add following div after that#}
-                                <label for="FirstName">نام</label>
-                                {% if form.first_name.errors %}
-                                    {{ form.first_name|attr:"id:FirstName"|attr:"class:error w-100" }}
-                                {% else %}
-                                    {{ form.first_name|attr:"id:FirstName"|attr:"class:w-100" }}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body">{% render_field form.first_name.errors %}</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <label for="LastName">نام خانوادگی</label>
-                                {% if form.last_name.errors %}
-                                    {{ form.last_name|attr:"id:LastName"|attr:"class:error w-100" }}
-                                {% else %}
-                                    {{ form.last_name|attr:"id:LastName"|attr:"class:w-100" }}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body">{% render_field form.last_name.errors %}</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <label for="Field">حوزه تخصصی</label>
-                                {% if form.special_field.errors %}
-                                    {{ form.special_field|attr:"id:Field"|attr:"class:error w-100" }}
-                                {% else %}
-                                    {{ form.special_field|attr:"id:Field"|attr:"class:w-100" }}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body">{% render_field form.special_field.errors %}</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <label for="MelliCode">کد ملی</label>
-                                {% if form.melli_code.errors %}
-                                    {{ form.melli_code|attr:"id:MelliCode"|attr:"class:error w-100" }}
-                                {% else %}
-                                    {{ form.melli_code|attr:"id:MelliCode"|attr:"class:w-100" }}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body">{% render_field form.melli_code.errors %}</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12 rankDiv">
-                                <label class="rankLabel" for="rank">مرتبه علمی</label>
-                                <select id="rank" name="scientific_rank">
-                                    <option selected dir="rtl">انتخاب کنید ...</option>
-                                    <option value="1">مربی</option>
-                                    <option value="2">استادیار</option>
-                                    <option value="3">دانشیار</option>
-                                    <option value="4">استاد</option>
-                                    <option value="5">استاد تمام</option>
-                                    <option value="6">پژوهشگر</option>
-                                </select>
-                                <div class="error">
-                                    <span class="error-body">{% render_field form.scientific_rank.errors %}</span>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <label for="Uni">دانشگاه محل فعالیت</label>
-                                {% if form.university.errors %}
-                                    {{ form.university|attr:"id:Uni"|attr:"class:error w-100" }}
-                                {% else %}
-                                    {{ form.university|attr:"id:Uni"|attr:"class:w-100" }}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body">{% render_field form.university.errors %}</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <label for="Address">آدرس</label>
-                                {% if form.address.errors %}
-                                    {{ form.address|attr:"id:Address"|attr:"class:error w-100" }}
-                                {% else %}
-                                    {{ form.address|attr:"id:Address"|attr:"class:w-100" }}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body">{% render_field form.address.errors %}</span>
-                                </div>
-
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <label for="HomeNum">تلفن منزل</label>
-                                {% if form.home_number.errors %}
-                                    {{ form.home_number|attr:"id:HomeNum"|attr:"class:error w-100" }}
-                                {% else %}
-                                    {{ form.home_number|attr:"id:HomeNum"|attr:"class:w-100" }}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body">{% render_field form.home_number.errors %}</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <label for="PhoneNum">تلفن همراه</label>
-                                {% if form.phone_number.errors %}
-                                    {{ form.phone_number|attr:"id:PhoneNum"|attr:"class:error w-100" }}
-                                {% else %}
-                                    {{ form.phone_number|attr:"id:PhoneNum"|attr:"class:w-100" }}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body">{% render_field form.phone_number.errors %}</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <label for="Email">پست الکترونیکی</label>
-                                {% if form.email_address.errors %}
-                                    {{ form.email_address|attr:"id:Email"|attr:"class:error w-100" }}
-                                {% else %}
-                                    {{ form.email_address|attr:"id:Email"|attr:"class:w-100" }}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body">{% render_field form.email_address.errors %}</span>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="col-lg-6">
+                            <label for="LastName">نام خانوادگی</label>
+                            <input type="text" id="LastName" class="w-100">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <label for="Field">حوزه تخصصی</label>
+                        <input type="text" id="Field" class="w-100">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <label for="MelliCode">کد ملی</label>
+                        <input type="text" id="MelliCode" class="w-100">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-12 rankDiv">
+                          <label class="rankLabel" for="rank">مرتبه علمی</label>
+                          <select id="rank">
+                              <option selected dir="rtl">انتخاب کنید ...</option>
+                              <option value="1">مربی</option>
+                              <option value="2">استادیار</option>
+                              <option value="3">دانشیار</option>
+                              <option value="4">استاد</option>
+                              <option value="5">استاد تمام</option>
+                              <option value="6">پژوهشگر</option>
+                          </select>
+                      </div>
+                    </div>
+                    <div class="row">
+                          <div class="col-lg-12">
+                              <label for="Uni">دانشگاه محل فعالیت</label>
+                              <input type="text" id="Uni" class="w-100">
+                          </div>
+                      </div>
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <label for="Address">آدرس</label>
+                        <textarea dir="rtl" rows="3" class="w-100" id="Address"></textarea>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-6">
+                        <label for="HomeNum">تلفن منزل</label>
+                        <input type="text" id="HomeNum" class="w-100">
+                      </div>
+                      <div class="col-lg-6">
+                        <label for="PhoneNum">تلفن همراه</label>
+                        <input type="text" id="PhoneNum" class="w-100">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <label for="Email">پست الکترونیکی</label>
+                        <input type="text" id="Email" class="w-100">
+                      </div>
                     </div>
                 </div>
-                <div class="card-footer">
-                    <input class="save-btn" type="submit" value="ذخیره">
-                </div>
-            </form>
+            </div>
+            <div class="card-footer">
+                <button class="save-btn" type="submit">ذخیره</button>
+            </div>
+      </form>
         </div>
     </div>
 </div>
