--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -317,7 +317,9 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <span class="sub-header"><span class="star-warning"></span>اگر از توانایی هایتان در موارد بالا اطمینان کامل ندارید می تواند از این آزمون کمک بگیرید! <a href="#">تست هوش هیجانی (EQ)</a> </span>
+                                <span class="sub-header"><span class="star-warning"></span>اگر از توانایی هایتان در
+                                    موارد بالا اطمینان کامل ندارید می تواند از این آزمون کمک بگیرید! <a
+                                            href="https://www.16personalities.com/fa">تست هوش هیجانی (EQ)</a> </span>
                             </div>
                         </div>
                     </div>
